--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/native-stack": "^7.8.6",
     "axios": "^1.13.2",
     "babel-preset-expo": "~54.0.0",
+    "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
     "expo": "~54.0.27",
     "expo-haptics": "~15.0.8",
@@ -24,14 +26,16 @@
     "react-native": "0.81.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-mmkv": "^4.1.0",
+    "react-native-quick-crypto": "^1.0.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "stream-browserify": "^3.0.0",
     "uuid": "^13.0.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@expo/metro-config": "^54.0.10",
     "@react-native-community/cli": "^20.0.2",
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
