--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:development": "npx expo run:android --dev-client"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -18,8 +19,10 @@
     "date-fns": "^4.1.0",
     "expo": "~54.0.27",
     "expo-constants": "~18.0.11",
+    "expo-dev-client": "~6.0.20",
     "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
+    "expo-notifications": "~0.32.14",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "immer": "^11.0.1",
