--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-notifications": "~0.32.14",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
     "immer": "^11.0.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
