--- a/eas.json
+++ b/eas.json
@@ -18,7 +18,9 @@
       }
     },
     "production": {
-      "autoIncrement": true
+      "android": {
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
